--- a/less/components/modal-window.less
+++ b/less/components/modal-window.less
@@ -42,6 +42,8 @@
     &__text {
         margin-top: 0;
         margin-bottom: 33px;
+        max-height: 240px;
+        overflow: hidden;
     }
 }
 
@@ -49,10 +51,10 @@
 @media (max-width: @screen_tablet) {
 
     .modal-window {
-        margin-left: -45%;
-        position: absolute;
         width: 90%;
-        top: 79%;
+        min-height: 100px;
+        margin-left: -45%;
+        margin-right: -45%;
 
         &__btn-close {
             left: 91.4%;
@@ -64,12 +66,6 @@
 @media (max-width: @screen_mobile) {
 
     .modal-window {
-        transform: none;
-        margin-top: 10%;
-        margin-left: -50%;
-        position: absolute;
-        top: 64%;
-        left: 55%;
 
         &__wrapper {
             padding: 20px 10px 30px 10px;
@@ -79,7 +75,6 @@
             left: 86.4%;
             top: 2%;
         }
-
 
     }
 }
